[package]
name = "reporeel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.30.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.69"
unicode-width = "0.2"
